tests/invalid/syntax/struct_field_wrong_sep.fig
// INVALID: struct field with = instead of :
// Expected parse error: colon required between field name and type
struct Bad
    x = i32
